# skeptic-mre

./: Cargo.toml
.github/workflows/: ci.yml
book/: .gitignore  book.toml
book/src/: chapter_1.md
book/tests/: Cargo.toml  build.rs
skeptic/src/: rt.rs
src/: lib.rs
