[package]
name = "book-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
skeptic = { path = "../../skeptic" }
skeptic-mre = { path = "../.." }

[build-dependencies]
skeptic = { path = "../../skeptic" }
